# mavunohub-api

./: LICENSE  README.md  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
authentication/: permissions.py  serializers.py  urls.py  views.py
core/: serializers.py  settings.py  urls.py
notifications/: models.py  serializers.py  urls.py  utils.py  views.py
notifications/migrations/: 0001_initial.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
payments/: models.py
payments/migrations/: 0001_initial.py
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_min_order.py  0003_alter_product_price_alter_product_stock.py
