[project]
name = "mavunohub-api"
version = "0.1.0"
description = "API for MavunoHub - An E-Commerce platform for farm product marketplace"
authors = [
    {name = "Elkana Maina",email = "elisoft.engineer@gmail.com"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "django-enumfields (>=2.1.1,<3.0.0)",
    "django-phonenumber-field (>=8.3.0,<9.0.0)",
    "phonenumbers (>=9.0.18,<10.0.0)",
    "django-filter (>=25.2,<26.0)",
    "pillow (>=12.0.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
